要望を修正した。

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             <li><a href="#article2" class="scroll">現地コーディネーターより</a></li>
             <li><a href="#article3" class="scroll">実行委員より</a></li>
             <li><a href="#article4" class="scroll">市民共創知研究会とは</a></li>
-            <li><a href="#article5" class="scroll">スケジュール(案)</a></li>
+            <li><a href="#article5" class="scroll">研究会スケジュール</a></li>
             <li><a href="#article6" class="scroll">みらいらぼの紹介</a></li>
           </ul>
         <!-- サイドメニュー終了 -->
@@ -231,7 +231,21 @@
             <div class="row" align="center">
               <div class="col-lg-12 col-md-12"><img class="single-Tt" src="Pictures/About/Timetable0702.jpg" alt="写真"></div>
             </div>
+            <!--
             <a href="./Files/About/20170322_Timetable.pdf" class="Link1">タイムテーブルのpdf</a>
+          -->
+            <!-- 論文募集要項 -->
+            <div class="btn-group">
+              <button type="button" class="btn btn-info" onclick="window.open('./Files/About/20170322_Timetable.pdf')">タイムテーブルのpdf　</button>
+              <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+                <span class="caret"></span>
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a href="./Files/About/20170322_Timetable.pdf" target="_blank">オープン</a></li>
+                <li><a href="./Files/About/20170322_Timetable.pdf" download="./Files/About/20170322_Timetable.pdf">ダウンロード</a></li>
+              </ul>
+            </div>
           </section>
 
           <section id="article6">
@@ -254,7 +268,8 @@
       <div class="container-fluid">
          <div class="navbar-brand">
            <p>
-             Copyright © 2016 <a>JSAI SIG-CCI</a>. Some Rights Reserved.<br>
+               COPYRIGHT 2017 JSAI Special Interest Group on Crowd Co-creation<br>
+               Intelligence (SIG-CCI) ALLRIGHTS RESERVED.
            </p>
         </div>
         <div class="navbar-brand">
