--- a/fieldWork.html
+++ b/fieldWork.html
@@ -207,18 +207,18 @@
               <p>
                 フィールドワークの詳細については論文募集要項に記載しています。
               </p>
-                <!-- 論文募集要項 -->
-                <div class="btn-group">
-                  <button type="button" class="btn btn-info" onclick="window.open('Files/Index/20170330_CFP案.pdf')">論文募集要項　</button>
-                  <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
-                    <span class="caret"></span>
-                    <span class="sr-only">Toggle Dropdown</span>
-                  </button>
-                  <ul class="dropdown-menu">
-                    <li><a href="Files/Index/20170330_CFP案.pdf" target="_blank">オープン</a></li>
-                    <li><a href="Files/Index/20170330_CFP案.pdf" download="20170324_研究会のしおり.pdf">ダウンロード</a></li>
-                  </ul>
-                </div>
+              <!-- 論文募集要項 -->
+              <div class="btn-group">
+                <button type="button" class="btn btn-info" onclick="window.open('Files/Index/20170415_SICCCI02_CFP.pdf')">論文募集要項　</button>
+                <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+                  <span class="caret"></span>
+                  <span class="sr-only">Toggle Dropdown</span>
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a href="Files/Index/20170415_SICCCI02_CFP.pdf" target="_blank">オープン</a></li>
+                  <li><a href="Files/Index/20170415_SICCCI02_CFP.pdf" download="20170415_SICCCI02_CFP.pdf">ダウンロード</a></li>
+                </ul>
+              </div>
 
             </div>
           </div>
@@ -234,7 +234,8 @@
       <div class="container-fluid">
         <div class="navbar-brand">
            <p>
-             Copyright © 2016 <a>JSAI SIG-CCI</a>. Some Rights Reserved.<br>
+               COPYRIGHT 2017 JSAI Special Interest Group on Crowd Co-creation<br>
+               Intelligence (SIG-CCI) ALLRIGHTS RESERVED.
            </p>
         </div>
         <div class="navbar-brand">
