--- a/registration.html
+++ b/registration.html
@@ -185,7 +185,8 @@
       <div class="container-fluid">
         <div class="navbar-brand">
            <p>
-             Copyright © 2016 <a>JSAI SIG-CCI</a>. Some Rights Reserved.<br>
+               COPYRIGHT 2017 JSAI Special Interest Group on Crowd Co-creation<br>
+               Intelligence (SIG-CCI) ALLRIGHTS RESERVED.
            </p>
         </div>
         <div class="navbar-brand">
