--- a/sponsor.html
+++ b/sponsor.html
@@ -54,12 +54,11 @@
           <h2>menu</h2>
           <ul>
             <li><a href="#" class="scroll">ページトップ</a></li>
-            <li><a href="#article1" class="scroll">研究会主査より</a></li>
-            <li><a href="#article2" class="scroll">現地コーディネーターより</a></li>
-            <li><a href="#article3" class="scroll">実行委員より</a></li>
-            <li><a href="#article4" class="scroll">市民共創知研究会とは</a></li>
-            <li><a href="#article5" class="scroll">スケジュール(案)</a></li>
-            <li><a href="#article6" class="scroll">みらいらぼの紹介</a></li>
+            <li><a href="#article1" class="scroll">開催概要</a></li>
+            <li><a href="#article2" class="scroll">スポンサー区分と特典内容</a></li>
+            <li><a href="#article3" class="scroll">中止対応</a></li>
+            <li><a href="#article4" class="scroll">スポンサー募集要項</a></li>
+            <li><a href="#article5" class="scroll">参考資料</a></li>
           </ul>
         <!-- サイドメニュー終了 -->
         </nav>
@@ -93,6 +92,71 @@
             </div>
           </section>
 
+          <section id="article2">
+            <h3>スポンサー区分と特典内容</h3>
+              <table class="table table-bordered">
+                <thead>
+                  <tr class="info"> <th>スポンサー区分</th> <th>特典内容</th> <th>金額</th> </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">ゴールド</th>
+                    <td>&#9312;Web、パンフレット等への企業・団体名掲載<br>&#9313;聴講者1名　参加費無料<sup>*1</sup></td>
+                    <td>５万円</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">プラチナ</th>
+                    <td>&#9312;Web、パンフレット等への企業名掲載<br>&#9313;企業・団体の取り組みに関する発表枠1件<sup>*2</sup><br>&#9314;上記発表者の参加費無料<sup>*1</sup></td>
+                    <td>１０万円</td>
+                  </tr>
+                </tbody>
+              </table>
+              <br>
+              <p>*1　個人の参加、発表の金額は、以下を想定しています（単位：円）</p>
+              <table class="table table-bordered table-striped">
+                <tbody>
+                  <tr><th scoep="row">参加費(社会人)</th> <td>10000</td></tr>
+                  <tr><th scope="row">発表エントリー費(社会人)</th><td>5000</td></tr>
+                  <tr><th scope="row">参加費(学生)</th> <td>4000</td></tr>
+                  <tr><th scope="row">発表エントリー費(学生)</th><td>4000</td></tr>
+                </tbody>
+              </table>
+              <br>
+              <p>*2　発表の形式や梗概執筆に関しましては、以下のURLをご覧ください</p>
+              <a href="http://www.itolab.nitech.ac.jp/SIG-CCI/conf2/registration.html">http://www.itolab.nitech.ac.jp/SIG-CCI/conf2/registration.html</a>
+          </section>
+
+          <section id="article3">
+            <h3>開催が中止された場合の対応</h3>
+            <p>天災・天候不良その他の不可抗力が原因で本研究会の開催が困難と判断した場合は、開催を中止させていただくことがございます。
+              また、同様の理由で、研究会への参加を見送らざるを得ない参加者が出てくる可能性があります。
+              この場合、すでにお支払いいただいた経費に関しては、払い戻しいたしかねます。あらかじめご了承いただけますようよろしくお願い申し上げます。</p>
+          </section>
+
+          <section id="article4">
+            <h3>スポンサー募集要項</h3>
+            <p>スポンサー企業・団体募集の詳細については以下のファイルをご覧ください。</p>
+            <!-- スポンサー企業・団体募集のご案内 -->
+            <div class="btn-group">
+              <button type="button" class="btn btn-info" onclick="window.open('Files/Sponsor/スポンサー企業・団体募集のご案内.pdf')">スポンサー募集要項　</button>
+              <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+                <span class="caret"></span>
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a href="Files/Sponsor/スポンサー企業・団体募集のご案内.pdf" target="_blank">オープン</a></li>
+                <li><a href="Files/Sponsor/スポンサー企業・団体募集のご案内.pdf" download="Files/Sponsor/スポンサー企業・団体募集のご案内.pdf">ダウンロード</a></li>
+              </ul>
+            </div>
+          </section>
+
+          <section id="article5">
+            <h3>参考資料</h3>
+            <P>(1)<a href="https://www.ai-gakkai.or.jp/about/about-us/">人工知能学会　概要</a></p>
+            <p>(2)<a href="http://www.itolab.nitech.ac.jp/SIG-CCI/files/conclusion/%E7%AC%AC%E4%B8%80%E5%9B%9E%E7%A0%94%E7%A9%B6%E4%BC%9A%E5%A0%B1%E5%91%8A%E8%B3%87%E6%96%99.pdf">第一回研究会　報告資料</a></p>
+            <p>(3)<a href="http://www.itolab.nitech.ac.jp/SIG-CCI/">市民共創知研究会HP：http://www.itolab.nitech.ac.jp/SIG-CCI/</a></p>
+
+          </section>
 
         </article>
   </div>
@@ -102,7 +166,8 @@
       <div class="container-fluid">
          <div class="navbar-brand">
            <p>
-             Copyright © 2016 <a>JSAI SIG-CCI</a>. Some Rights Reserved.<br>
+               COPYRIGHT 2017 JSAI Special Interest Group on Crowd Co-creation<br>
+               Intelligence (SIG-CCI) ALLRIGHTS RESERVED.
            </p>
         </div>
         <div class="navbar-brand">
