--- a/traffic.html
+++ b/traffic.html
@@ -111,7 +111,19 @@
           <div class="row">
             <div class="col-md-12 col-sm-12">
                 <img src="Pictures/Traffic/0630Route.jpg" align="left">
-                <a href="Files/Traffic/20170322_FW理想のルート.pdf" class="Link1">フィールドワーク理想のルートpdf</a>
+                <a href="" class="Link1"></a>
+                <!-- 研究会のしおり -->
+                <div class="btn-group">
+                  <button type="button" class="btn btn-info" onclick="window.open('Files/Traffic/20170322_FW理想のルート.pdf')">フィールドワーク理想のルートpdf</button>
+                  <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+                    <span class="caret"></span>
+                    <span class="sr-only">Toggle Dropdown</span>
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><a href="Files/Traffic/20170322_FW理想のルート.pdf" target="_blank">オープン</a></li>
+                    <li><a href="Files/Traffic/20170322_FW理想のルート.pdf" download="Files/Traffic/20170322_FW理想のルート.pdf">ダウンロード</a></li>
+                  </ul>
+                </div>
             </div>
           </div>
           <h5 class="MessageContent">7月1日(土)</h5>
@@ -119,7 +131,18 @@
           <div class="row">
             <div class="col-md-12 col-sm-12">
               <img src="Pictures/Traffic/0701Route.jpg">
-              <a href="Files/Traffic/20170322_2日目参加者理想のルート.pdf" class="Link1">２日目理想のルートpdf</a>
+              <!-- 研究会のしおり -->
+              <div class="btn-group">
+                <button type="button" class="btn btn-info" onclick="window.open('Files/Traffic/20170322_2日目参加者理想のルート.pdf')">２日目理想のルートpdf</button>
+                <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+                  <span class="caret"></span>
+                  <span class="sr-only">Toggle Dropdown</span>
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a href="Files/Traffic/20170322_2日目参加者理想のルート.pdf" target="_blank">オープン</a></li>
+                  <li><a href="Files/Traffic/20170322_2日目参加者理想のルート.pdf" download="Files/Traffic/20170322_2日目参加者理想のルート.pdf">ダウンロード</a></li>
+                </ul>
+              </div>
             </div>
           </div>
         </section>
@@ -139,14 +162,14 @@
           <p>対馬での過ごし方については「研究会のしおり」をお読みください</p>
           <!-- 研究会のしおり -->
           <div class="btn-group">
-            <button type="button" class="btn btn-info" onclick="window.open('Files/Index/20170324_研究会のしおり.pdf')">研究会のしおり</button>
+            <button type="button" class="btn btn-info" onclick="window.open('Files/Index/20170415_SIGCCI02_Guide.pdf')">研究会のしおり</button>
             <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
               <span class="caret"></span>
               <span class="sr-only">Toggle Dropdown</span>
             </button>
             <ul class="dropdown-menu">
-              <li><a href="Files/About/20170324_研究会のしおり.pdf" target="_blank">オープン</a></li>
-              <li><a href="Files/About/20170324_研究会のしおり.pdf" download="20170324_研究会のしおり.pdf">ダウンロード</a></li>
+              <li><a href="Files/About/20170415_SIGCCI02_Guide.pdf" target="_blank">オープン</a></li>
+              <li><a href="Files/About/20170415_SIGCCI02_Guide.pdf" download="20170415_SIGCCI02_Guide.pdf">ダウンロード</a></li>
             </ul>
           </div>
         </section>
@@ -159,7 +182,8 @@
       <div class="container-fluid">
         <div class="navbar-brand">
            <p>
-             Copyright © 2016 <a>JSAI SIG-CCI</a>. Some Rights Reserved.<br>
+               COPYRIGHT 2017 JSAI Special Interest Group on Crowd Co-creation<br>
+               Intelligence (SIG-CCI) ALLRIGHTS RESERVED.
            </p>
         </div>
         <div class="navbar-brand">
