GalaxyS5 でボタンがリンクボタンが画面内に収まるように参加申し込みフォームへのリンクの文字数を減らした。

--- a/registration.html
+++ b/registration.html
@@ -43,7 +43,7 @@
         <!-- サイドメニュー開始 -->
         <input type="checkbox" id="navTgl" class="navbar-toggle">
         <label for="navTgl" class="open side">≡</label>
-        <label for="navTgl" class="close"></label>
+        <label for="navTgl" class="close side"></label>
         <nav class="menu">
           <h2>menu</h2>
           <ul>
@@ -103,7 +103,7 @@
           <div class="overview">
             <br>
             <dt>参加申込締切：</dt><dd>2017年6月10日（土）</dd><dd class="warning">＊フィールドワークの調整のため、早期の参加申し込みにご協力ください</dd>
-            <dt>参加申込フォーム：</dt><dd><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1">https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1</a></dd>
+            <dt>参加申込フォーム：</dt><dd><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1">こちら</a></dd>
             <dt>発表原稿投稿締切：</dt><dd>2017年6月10日（土）</dd>
           </div>
         </section>
