スポンサー募集要項ダウンロード修正

--- a/sponsor.html
+++ b/sponsor.html
@@ -145,7 +145,7 @@
               </button>
               <ul class="dropdown-menu">
                 <li><a href="Files/Sponsor/スポンサー企業・団体募集のご案内.pdf" target="_blank">オープン</a></li>
-                <li><a href="Files/Sponsor/スポンサー企業・団体募集のご案内.pdf" download="Files/Sponsor/スポンサー企業・団体募集のご案内.pdf">ダウンロード</a></li>
+                <li><a href="Files/Sponsor/スポンサー企業・団体募集のご案内.pdf" download="Files/Sponsor/スポンサー企業・団体募集のご案内.pdf">ダウンロード</a></li>
               </ul>
             </div>
           </section>
