sponsor.html の募集要項のダウンロードファイル名とfieldWork.html のフィールドワーク行程の写真名を変更した。 詳しい原因は不明だがファイル名に日本語が入ると不調が起きる可能性がある。

--- a/fieldWork.html
+++ b/fieldWork.html
@@ -82,8 +82,10 @@
           <h2>フィールドワーク紹介</h2>
 
           <h4 class="fw-title" id="article0" style="margin-top: 40px;">フィールドワーク行程</h4>
+          <!--
           <img class="img-responsive" src="Pictures/Prepare/FieldWork/フィールドワーク行程.jpg" alt="写真">
-
+        -->
+          <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWorkJourney.jpg" alt="写真">
           <!-- フィールドワーク01,02 -->
           <div class="row">
             <div class="col-md-6 col-lg-6 col-sm-6 fw-box">
