--- a/sponsor.html
+++ b/sponsor.html
@@ -136,7 +136,7 @@
           <section id="article4">
             <h3>スポンサー募集要項</h3>
             <p>スポンサー企業・団体募集の詳細については以下のファイルをご覧ください。</p>
-            <!-- スポンサー企業・団体募集のご案内 -->
+            <!-- スポンサー企業・団体募集のご案内
             <div class="btn-group">
               <button type="button" class="btn btn-info" onclick="window.open('Files/Sponsor/スポンサー企業・団体募集のご案内.pdf')">スポンサー募集要項　</button>
               <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
@@ -148,13 +148,25 @@
                 <li><a href="Files/Sponsor/スポンサー企業・団体募集のご案内.pdf" download="Files/Sponsor/スポンサー企業・団体募集のご案内.pdf">ダウンロード</a></li>
               </ul>
             </div>
+            -->
+            <div class="btn-group">
+              <button type="button" class="btn btn-info" onclick="window.open('Files/Sponsor/SponsorGuidance.pdf')">スポンサー募集要項　</button>
+              <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+                <span class="caret"></span>
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a href="Files/Sponsor/SponsorGuidance.pdf" target="_blank">オープン</a></li>
+                <li><a href="Files/Sponsor/SponsorGuidance.pdf" download="SponsorGuidance.pdf">ダウンロード</a></li>
+              </ul>
+            </div>
           </section>
 
           <section id="article5">
             <h3>参考資料</h3>
             <P>(1)<a href="https://www.ai-gakkai.or.jp/about/about-us/">人工知能学会　概要</a></p>
             <p>(2)<a href="http://www.itolab.nitech.ac.jp/SIG-CCI/files/conclusion/%E7%AC%AC%E4%B8%80%E5%9B%9E%E7%A0%94%E7%A9%B6%E4%BC%9A%E5%A0%B1%E5%91%8A%E8%B3%87%E6%96%99.pdf">第一回研究会　報告資料</a></p>
-            <p>(3)<a href="http://www.itolab.nitech.ac.jp/SIG-CCI/">市民共創知研究会HP：http://www.itolab.nitech.ac.jp/SIG-CCI/</a></p>
+            <p>(3)<a href="http://www.itolab.nitech.ac.jp/SIG-CCI/">市民共創知研究会HP</a></p>
 
           </section>
 
