一部のリンクの文字色を変えた。 一部のサイトへのアクセスの注意点を追加した。

--- a/about.html
+++ b/about.html
@@ -199,7 +199,7 @@
                 <br><br>
                 地域が抱える諸々の問題に対して「共通善」を掲げ、実践と抽象のバランスを意識しながら地域の方とともに取り組んでいくのが市民共創知研究会だといえます。
               </p>
-              <a href="http://www.itolab.nitech.ac.jp/SIG-CCI/" class="Link1" target="_blank">市民共創知研究会Web</a>
+              <a href="http://www.itolab.nitech.ac.jp/SIG-CCI/" class="Link1 Link2" target="_blank">市民共創知研究会Web</a>
             </figure>
           </section>
 
@@ -216,7 +216,7 @@
             <p>
               <br>
               フィールドワークの詳しい内容は
-              <a href="fieldWork.html" class="Link1">
+              <a href="fieldWork.html" class="Link1 Link2">
                 こちら
               </a>
               <br><br>
@@ -256,7 +256,10 @@
                     <img src="Pictures/About/MiraiLab.png" alt="写真">
                   </a>
                   <p>みらいらぼは、誰もが自分の夢を持ち、夢を実現できる世界を実現します。対話で多様な分野の人たちと関わることで夢を見つけ、みらいらぼで世界中の人たちの意見や知見を貰いながら、夢を実現を行います。</p>
-                  <p><a href="https://mirai-making.herokuapp.com/" class="Link1">みらいらぼ</a>へのリンク</p>
+                  <p><a href="https://mirai-making.herokuapp.com/" class="Link1 Link2">みらいらぼ</a>へのリンク</p>
+                  <dd class="warning">
+                    ※企業や大学などのネットワークではアクセスできない場合があります。アクセスできない方は、お手数ですが、インターネット経由で再度接続を試していただけますようお願いいたします。
+                  </dd>
               </div>
             </div>
           </section>
