--- a/fieldWork.html
+++ b/fieldWork.html
@@ -197,7 +197,10 @@
               <p>
                 フィールドワークで立ち寄る個々のスポットについては別ページ「つしまっぷ」にて紹介しています。<br>
               </p>
-              <a href="https://tsushimap.herokuapp.com/" target="_blank">つしまっぷ</a>
+              <a class="Link1" href="https://tsushimap.herokuapp.com/" target="_blank">つしまっぷ</a>
+              <dd class="warning">
+                ※企業や大学などのネットワークではアクセスできない場合があります。アクセスできない方は、お手数ですが、インターネット経由で再度接続を試していただけますようお願いいたします。
+              </dd>
             </div>
           </div>
           <!-- フィールドワーク スポット終了 -->
