--- a/registration.html
+++ b/registration.html
@@ -88,7 +88,7 @@
               長崎県対馬市宿坊西山寺<br>
               〒817-0022 長崎県対馬市厳原町国分1543<br>
               対馬までの交通アクセス：「研究会のしおり」もしくは以下のURL参照<br>
-              <a href="http://www.itolab.nitech.ac.jp/SIG-CCI/conf2/traffic.html">http://www.itolab.nitech.ac.jp/SIG-CCI/conf2/traffic.html</a>
+              <a class="Link2" href="http://www.itolab.nitech.ac.jp/SIG-CCI/conf2/traffic.html">http://www.itolab.nitech.ac.jp/SIG-CCI/conf2/traffic.html</a>
               <dd>
             <dt>主催：</dt><dd>人工知能学会市民共創知研究会(SIG-CCI)</dd>
             <!--
@@ -105,7 +105,9 @@
           <div class="overview">
             <br>
             <dt>参加申込締切：</dt><dd>2017年6月10日（土）</dd><dd class="warning">＊フィールドワークの調整のため、早期の参加申し込みにご協力ください</dd>
-            <dt>参加申込フォーム：</dt><dd><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1">こちら</a></dd>
+            <dt>参加申込フォーム：</dt><dd><a class="Link2" href="https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1">こちら</a>  <dd class="warning">
+                ※企業や大学などのネットワークではアクセスできない場合があります。アクセスできない方は、お手数ですが、インターネット経由で再度接続を試していただけますようお願いいたします。
+              </dd></dd>
             <dt>発表原稿投稿締切：</dt><dd>2017年6月10日（土）</dd>
           </div>
         </section>
@@ -132,16 +134,19 @@
           </p>
           <img src="Pictures/Registration/flow.jpg">
           <br><br>
-          <p>原稿執筆案内: <a href="http://www.itolab.nitech.ac.jp/SIG-CCI/submission.html">http://www.itolab.nitech.ac.jp/SIG-CCI/submission.html</a></p>
+          <p>原稿執筆案内: <a class="Link2" href="http://www.itolab.nitech.ac.jp/SIG-CCI/submission.html">http://www.itolab.nitech.ac.jp/SIG-CCI/submission.html</a></p>
           <p>•A4 1～6ページ程度（最大8ページまで）</p>
           <p>•人工知能学会研究会スタイルファイル／Wordテンプレートをご利用ください。</p>
           <br><br>
-          <a href="http://www.ai-gakkai.or.jp/sig/sig-style/">http://www.ai-gakkai.or.jp/sig/sig-style/</a>
+          <a class="Link2" href="http://www.ai-gakkai.or.jp/sig/sig-style/">http://www.ai-gakkai.or.jp/sig/sig-style/</a>
           <P>・完成原稿はPDFに変換した上で、2017年6月10日（土）までに、下記URLの原稿投稿システムからご投稿下さい。</p>
           <p>・原稿作成に際し、補助が必要な方はお知らせください。学生、研究者がメンターとして原稿作成、発表スライド作成を支援いたします。</p>
           <br><br>
           <p>論文投稿システム：</p>
-          <a href="https://form.jotform.me/70938432366462">https://form.jotform.me/70938432366462</a>
+          <a class="Link2" href="https://form.jotform.me/70938432366462">https://form.jotform.me/70938432366462</a>
+          <dd class="warning">
+            ※企業や大学などのネットワークではアクセスできない場合があります。アクセスできない方は、お手数ですが、インターネット経由で再度接続を試していただけますようお願いいたします。
+          </dd>
         </section>
 
         <section id="article5">
@@ -176,7 +181,7 @@
           <p>オープンサイエンス、オープンガバメント、スマートシティ、オンラインコミュニティ、マルチエージェントシステム、社会ネットワーク分析、IoT/M2M、WWW、高齢者介護、社会選択理論、グループ意思決定、地域学、観光学、社会心理学、社会学、経済学、</p>
           <p>行動経済学、文化経済学、心理学、倫理・法律、その他の科学・学術等の社会課題応用に関する共創的な事例</p>
           <p>※第1回研究会で発表された内容については、下記サイトをご覧ください。</p>
-          <p><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/confs/sig-cci1.html#talk_dialogue">http://www.itolab.nitech.ac.jp/SIG-CCI/confs/sig-cci1.html#talk_dialogue</a></p>
+          <p><a class="Link2" href="http://www.itolab.nitech.ac.jp/SIG-CCI/confs/sig-cci1.html#talk_dialogue">http://www.itolab.nitech.ac.jp/SIG-CCI/confs/sig-cci1.html#talk_dialogue</a></p>
         </section>
 
       </article>
