--- a/sponsor.html
+++ b/sponsor.html
@@ -123,7 +123,7 @@
               </table>
               <br>
               <p>*2　発表の形式や梗概執筆に関しましては、以下のURLをご覧ください</p>
-              <a href="http://www.itolab.nitech.ac.jp/SIG-CCI/conf2/registration.html">http://www.itolab.nitech.ac.jp/SIG-CCI/conf2/registration.html</a>
+              <a class="Link2" href="http://www.itolab.nitech.ac.jp/SIG-CCI/conf2/registration.html">http://www.itolab.nitech.ac.jp/SIG-CCI/conf2/registration.html</a>
           </section>
 
           <section id="article3">
@@ -164,10 +164,12 @@
 
           <section id="article5">
             <h3>参考資料</h3>
-            <P>(1)<a href="https://www.ai-gakkai.or.jp/about/about-us/">人工知能学会　概要</a></p>
-            <p>(2)<a href="http://www.itolab.nitech.ac.jp/SIG-CCI/files/conclusion/%E7%AC%AC%E4%B8%80%E5%9B%9E%E7%A0%94%E7%A9%B6%E4%BC%9A%E5%A0%B1%E5%91%8A%E8%B3%87%E6%96%99.pdf">第一回研究会　報告資料</a></p>
-            <p>(3)<a href="http://www.itolab.nitech.ac.jp/SIG-CCI/">市民共創知研究会HP</a></p>
-
+            <P>(1)<a class="Link2" href="https://www.ai-gakkai.or.jp/about/about-us/">人工知能学会　概要</a></p>
+            <p>(2)<a class="Link2" href="http://www.itolab.nitech.ac.jp/SIG-CCI/files/conclusion/%E7%AC%AC%E4%B8%80%E5%9B%9E%E7%A0%94%E7%A9%B6%E4%BC%9A%E5%A0%B1%E5%91%8A%E8%B3%87%E6%96%99.pdf">第一回研究会　報告資料</a></p>
+            <p>(3)<a class="Link2" href="http://www.itolab.nitech.ac.jp/SIG-CCI/">市民共創知研究会HP</a></p>
+            <dd class="warning">
+              ※企業や大学などのネットワークではアクセスできない場合があります。アクセスできない方は、お手数ですが、インターネット経由で再度接続を試していただけますようお願いいたします。
+            </dd>
           </section>
 
         </article>
