--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <title>第２回　研究会について</title>
   </head>
 <body>
-  <div id="wrap" class="container-fluid">
+  <div id="wrap" class="">
     <!-- ヘッダー(ナビバー )開始 -->
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
@@ -29,6 +29,7 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">ホーム</a></li>
             <li><a href="about.html">研究会について</a></li>
+            <li><a href="schedule.html">スケジュール</a></li>
             <li><a href="prepare.html">対馬についての予習</a></li>
             <li><a href="fieldWork.html">フィールドワーク</a></li>
             <li><a href="traffic.html">交通案内</a></li>
@@ -50,8 +51,7 @@
             <li><a href="#article2" class="scroll">現地コーディネーターより</a></li>
             <li><a href="#article3" class="scroll">実行委員より</a></li>
             <li><a href="#article4" class="scroll">市民共創知研究会とは</a></li>
-            <li><a href="#article5" class="scroll">研究会スケジュール</a></li>
-            <li><a href="#article6" class="scroll">みらいらぼの紹介</a></li>
+            <li><a href="#article5" class="scroll">みらいらぼの紹介</a></li>
           </ul>
         <!-- サイドメニュー終了 -->
         </nav>
@@ -59,7 +59,7 @@
     </nav>
     <!-- ヘッダー終了 -->
 
-        <!-- パンくずリスト開始 -->
+        <!-- パンくずリスト開始
         <div>
           <p class="pankuzu">
             <a href="http://www.itolab.nitech.ac.jp/SIG-CCI/">市民共創知 研究会 Web</a>
@@ -70,11 +70,25 @@
           </p>
         </div>
         <!-- パンくずリスト終了 -->
+
     <!-- 主文開始 -->
     <div class="contents">
+      <div class="ribbon-wrap">
+        <div class="content-wrap">
+          <ol class="ribbon-breadcrumb-list">
+            <li class="ribbon-breadcrumb-item"><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/" class="ribbon-breadcrumb">市民共創知 研究会 Web</a></li>
+            <li class="ribbon-breadcrumb-item"><a href="index.html" class="ribbon-breadcrumb">第２回 研究会 Web</a></li>
+            <li class="ribbon-breadcrumb-item Last"><span class="ribbon-breadcrumb">研究会について</span></li>
+          </ol>
+          <h1 class="ribbon-banner"><span class="ribbon-banner-text">研究会について</span></h1>
+        </div>
+      </div>
+      <div class="row fw-box">
+        <div class="col-md-8 col-md-offset-2">
+          <img class="img-responsive" src="Pictures/About/Theme.jpg" alt="写真">
+        </div><!--   <div class="col-md-8 col-md-offset-2"> -->
+      </div>
         <article>
-          <h1>研究会について</h1>
-
           <section id="article1">
             <h3>研究会主査より</h3>
             <section class="comment_item">
@@ -204,51 +218,6 @@
           </section>
 
           <section id="article5">
-            <h3>研究会スケジュール</h3>
-            <p>
-              第２回研究会は６月３０日、７月１日、７月２日の３日間にわたり開催されます。
-            </p>
-            <!-- 6月30日 -->
-            <h4>6月30日(金)</h4>
-            <div class="row" align="center">
-              <div class="col-lg-12 col-md-12"><img src="Pictures/About/Timetable0630.jpg" alt="写真"></div>
-            </div>
-            <p>
-              <br>
-              フィールドワークの詳しい内容は
-              <a href="fieldWork.html" class="Link1 Link2">
-                こちら
-              </a>
-              <br><br>
-            </p>
-            <!-- ７月１日(土) -->
-            <h4>7月1日(土)</h4>
-            <div class="row" align="center">
-              <div class="col-lg-12 col-md-12"><img class="single-Tt" src="Pictures/About/Timetable0701.jpg" alt="写真"></div>
-            </div>
-            <!-- ７月2日(日) -->
-            <h4>7月2日(日)</h4>
-            <div class="row" align="center">
-              <div class="col-lg-12 col-md-12"><img class="single-Tt" src="Pictures/About/Timetable0702.jpg" alt="写真"></div>
-            </div>
-            <!--
-            <a href="./Files/About/20170322_Timetable.pdf" class="Link1">タイムテーブルのpdf</a>
-          -->
-            <!-- 論文募集要項 -->
-            <div class="btn-group">
-              <button type="button" class="btn btn-info" onclick="window.open('./Files/About/20170322_Timetable.pdf')">タイムテーブルのpdf　</button>
-              <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
-                <span class="caret"></span>
-                <span class="sr-only">Toggle Dropdown</span>
-              </button>
-              <ul class="dropdown-menu">
-                <li><a href="./Files/About/20170322_Timetable.pdf" target="_blank">オープン</a></li>
-                <li><a href="./Files/About/20170322_Timetable.pdf" download="./Files/About/20170322_Timetable.pdf">ダウンロード</a></li>
-              </ul>
-            </div>
-          </section>
-
-          <section id="article6">
             <h3>みらいらぼの紹介</h3>
             <div class="row" align="">
               <div class="col-lg-12 col-md-12">
