--- a/fieldWork.html
+++ b/fieldWork.html
@@ -10,7 +10,7 @@
 </head>
   <body>
 
-    <div id="wrap" class="container-fluid">
+    <div id="wrap" class="">
       <!-- ヘッダー(ナビバー )開始 -->
       <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -30,6 +30,7 @@
             <ul class="nav navbar-nav">
               <li><a href="index.html">ホーム</a></li>
               <li><a href="about.html">研究会について</a></li>
+              <li><a href="schedule.html">スケジュール</a></li>
               <li><a href="prepare.html">対馬についての予習</a></li>
               <li><a href="fieldWork.html">フィールドワーク</a></li>
               <li><a href="traffic.html">交通案内</a></li>
@@ -64,28 +65,24 @@
       </nav>
       <!-- ヘッダー終了 -->
 
-        <!-- パンくずリスト開始 -->
-        <div>
-          <p class="pankuzu">
-            <a href="http://www.itolab.nitech.ac.jp/SIG-CCI/">市民共創知 研究会 Web</a>
-            &nbsp;&nbsp;&gt;&nbsp;&nbsp;
-            <a href="index.html">第２回 研究会 Web</a>
-            &nbsp;&nbsp;&gt;&nbsp;&nbsp;
-            <a href="fieldWork.html">フィールドワーク</a>
-          </p>
-        </div>
-        <!-- パンくずリスト終了 -->
-
     <div class="contents">
+      <div class="ribbon-wrap">
+        <div class="content-wrap">
+          <ol class="ribbon-breadcrumb-list">
+            <li class="ribbon-breadcrumb-item"><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/" class="ribbon-breadcrumb">市民共創知 研究会 Web</a></li>
+            <li class="ribbon-breadcrumb-item"><a href="index.html" class="ribbon-breadcrumb">第２回 研究会 Web</a></li>
+            <li class="ribbon-breadcrumb-item Last"><span class="ribbon-breadcrumb">フィールドワーク</span></li>
+          </ol>
+          <h1 class="ribbon-banner"><span class="ribbon-banner-text">フィールドワーク</span></h1>
+        </div>
+      </div>
       <div class="row fw-box">
         <div class="col-md-8 col-md-offset-2">
-          <h2>フィールドワーク紹介</h2>
-
-          <h4 class="fw-title" id="article0" style="margin-top: 40px;">フィールドワーク行程</h4>
+        <h4 class="fw-title" id="article0" style="margin-top: 40px;">フィールドワーク行程</h4>
           <!--
           <img class="img-responsive" src="Pictures/Prepare/FieldWork/フィールドワーク行程.jpg" alt="写真">
         -->
-          <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWorkJourney.jpg" alt="写真">
+          <img class="img-responsive" src="Pictures/FieldWork/FWTimetable.jpg" alt="写真">
           <!-- フィールドワーク01,02 -->
           <div class="row">
             <div class="col-md-6 col-lg-6 col-sm-6 fw-box">
@@ -98,7 +95,7 @@
               </p>
 
               <h4 class="fw-title-sm" style="text-decoration: underline;">全日コース</h4>
-              <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork11.png" alt="写真">
+              <img class="img-responsive" src="Pictures/FieldWork/FieldWork11.png" alt="写真">
             </div>
 
             <hr class="hr-sm">
@@ -113,7 +110,7 @@
               </p>
 
               <h4 class="fw-title-sm" style="text-decoration: underline;">半日コース</h4>
-              <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork12.png" alt="写真">
+              <img class="img-responsive" src="Pictures/FieldWork/FieldWork12.png" alt="写真">
             </div>
           </div><!-- div class="row" id="article1"> -->
           <!-- フィールドワーク01,02終了 -->
@@ -133,7 +130,7 @@
               </p>
 
               <h4 class="fw-title-sm" style="text-decoration: underline;">晴天時</h4>
-              <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork09.png" alt="写真">
+              <img class="img-responsive" src="Pictures/FieldWork/FieldWork09.png" alt="写真">
             </div>
 
             <div class="col-md-6 col-lg-6">
@@ -142,7 +139,7 @@
               </p>
 
               <h4 class="fw-title-sm" style="text-decoration: underline;">雨天時</h4>
-              <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork10.png" alt="写真">
+              <img class="img-responsive" src="Pictures/FieldWork/FieldWork10.png" alt="写真">
             </div>
           </div>
 
@@ -157,7 +154,7 @@
               <p class="item_txt_lg">
                 地場産業の活性化に取り組む方を訪ねるツアーです。福岡2便、長崎2便で来島の方は対馬空港までお迎えに上がります。対馬の魚介を味わった後、海産物の6次産業化、地域力発信に力を入れている真心水産を訪れます。比田勝港に近い日昇漁業ではIターンから漁業就業、企業に至った経緯などを伺います。その後、厳原中心部で解散となります。
               </p>
-              <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork14.png" alt="写真">
+              <img class="img-responsive" src="Pictures/FieldWork/FieldWork14.png" alt="写真">
             </div>
 
             <hr class="hr-sm">
@@ -170,7 +167,7 @@
                 ジェットフォイルで来島の方はふれあい処まで徒歩でお願いします。ふれあい処で対馬の郷土料理を味わった後、博物館準備室の方から建設中の博物館に関するレクチャをいただきます。
                 その後、宗家の菩提寺である万松院、江戸時代のドックであるお船江をめぐります。最後は厳原中心部で解散となります。
               </p>
-              <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork15.png" alt="写真">
+              <img class="img-responsive" src="Pictures/FieldWork/FieldWork15.png" alt="写真">
             </div>
           </div>
           <!-- フィールドワーク0405終了 -->
@@ -185,7 +182,7 @@
               <p class="item_txt">
                 フィールドワーク3~5を希望される方で、福岡、長崎1便およびフェリーでの来島をされる方にはオプションコースをご用意しています。元寇襲来の地など史跡を巡るコースになっています。別途料金は発生しません。
               </p>
-              <img class="img-responsive" src="Pictures/Prepare/FieldWork/Fieldwork13.png" alt="写真">
+              <img class="img-responsive" src="Pictures/FieldWork/Fieldwork13.png" alt="写真">
             </div>
           </div>
           <!-- フィールドワーク06終了 -->
