--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">ホーム</a></li>
             <li><a href="about.html">研究会について</a></li>
+            <li><a href="schedule.html">スケジュール</a></li>
             <li><a href="prepare.html">対馬についての予習</a></li>
             <li><a href="fieldWork.html">フィールドワーク</a></li>
             <li><a href="traffic.html">交通案内</a></li>
@@ -88,6 +89,7 @@
         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="3"></li>
       </ol>
 
       <!-- Wrapper for slides -->
@@ -95,10 +97,11 @@
         <div class="item active">
           <img src="Pictures/Index/Top01.jpg" alt="..."　class="img-responsive　center-block">
           <div class="carousel-caption">
-            <!--
-            <h5>市民共創知研究会</h5>
-            <p>和多都美神社</p>
-          -->
+          </div>
+        </div>
+        <div class="item">
+          <img src="Pictures/Index/ThemeTop.jpg" alt="..."　class="img-responsive　center-block">
+          <div class="carousel-caption">
           </div>
         </div>
         <div class="item">
@@ -156,8 +159,8 @@
             <span class="sr-only">Toggle Dropdown</span>
           </button>
           <ul class="dropdown-menu">
-            <li><a href="Files/About/20170415_SIGCCI02_Guide.pdf" target="_blank">オープン</a></li>
-            <li><a href="Files/About/20170415_SIGCCI02_Guide.pdf" download="20170415_SIGCCI02_Guide.pdf">ダウンロード</a></li>
+            <li><a href="Files/Index/20170415_SIGCCI02_Guide.pdf" target="_blank">オープン</a></li>
+            <li><a href="Files/Index/20170415_SIGCCI02_Guide.pdf" download="20170415_SIGCCI02_Guide.pdf">ダウンロード</a></li>
           </ul>
         </div>
         <br><br>
@@ -177,22 +180,32 @@
       <!-- 右メニュー終わり -->
       <div class="col-xs-12 col-md-8 col-md-pull-4">
         <br><br>
+        <h5 class="Emphasis2" style="font-size: 15px;">
+            第2回市民共創知研究会
+        </h5>
         <h5 class="Emphasis2" style="font-size: 30px;">
-          みらいらぼin対馬
-        ～対馬の宝と向かい合う3日間
+          みらいらぼつしま
         </h5>
         <br>
-        <p>私たち市民共創知研究会は、地域がかかえている問題に、市民の方々と一緒に取り組み、解決していくための場をつくるために活動をしています。
-        第2回の舞台は長崎県対馬市。国境の離島に乗り込み、地域を知り、課題について対話します。研究者や技術者だけでなく、いろいろな経験を積んだ方が集まることによって対話が加速し、解決に向けて動き出します。
-        みなさんのご参加をお待ちしています。</p>
+        <p>
+          私たち市民共創知研究会は、地域がかかえている問題に、市民の方々と一緒に取り組み、解決していくための場をつくるために活動をしています。
+          <br><br>
+          第2回の舞台は長崎県対馬市。「はたらける地域にするために」をテーマに国境の離島に乗り込み、地域を知り、課題について対話します。研究者や技術者だけでなく、いろいろな経験を積んだ方が集まることによって対話が加速し、解決に向けて動き出します。
+          <br><br>
+          みなさんのご参加をお待ちしています。
+          <br>
+        </p>
         <div class="overview">
           <h5 class="Emphasis2" style="font-size: 20px; padding-top:20px;">人工知能学会 市民共創知研究会 第2回研究会</h5>
           <p>会期：2017年6月30日(金)～7月2日(日)</p>
-          <p>会場：長崎県対馬市 西山寺</p>
+          <p>会場：長崎県対馬市 西山寺ほか</p>
           <p>主催：人工知能学会 市民共創知研究会</p>
           <!--
           <p>後援：対馬市、(一社)対馬観光物産協会</p>
         -->
+          <br>
+          <p>研究会参加申し込み締め切り：6月10日</p>
+          <p>論文発表投稿申込み締め切り：6月10日</p>
         </div>
 
       </div>
