--- a/registration.html
+++ b/registration.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <div id="wrap" class="container-fluid">
+  <div id="wrap" class="">
     <!-- ヘッダー(ナビバー )開始 -->
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
@@ -30,6 +30,7 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">ホーム</a></li>
             <li><a href="about.html">研究会について</a></li>
+            <li><a href="schedule.html">スケジュール</a></li>
             <li><a href="prepare.html">対馬についての予習</a></li>
             <li><a href="fieldWork.html">フィールドワーク</a></li>
             <li><a href="traffic.html">交通案内</a></li>
@@ -62,19 +63,18 @@
     </nav>
     <!-- ヘッダー終了 -->
 
-      <!-- パンくずリスト開始 -->
-      <div>
-        <p class="pankuzu">
-          <a href="http://www.itolab.nitech.ac.jp/SIG-CCI/">市民共創知 研究会 Web</a>
-          &nbsp;&nbsp;&gt;&nbsp;&nbsp;
-          <a href="index.html">第２回 研究会 Web</a>
-          &nbsp;&nbsp;&gt;&nbsp;&nbsp;
-          <a href="registration.html">参加申し込み</a>
-        </p>
-      </div>
-      <!-- パンくずリスト終了 -->
     <!-- 主文開始 -->
     <div class="contents">
+      <div class="ribbon-wrap">
+        <div class="content-wrap">
+          <ol class="ribbon-breadcrumb-list">
+            <li class="ribbon-breadcrumb-item"><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/" class="ribbon-breadcrumb">市民共創知 研究会 Web</a></li>
+            <li class="ribbon-breadcrumb-item"><a href="index.html" class="ribbon-breadcrumb">第２回 研究会 Web</a></li>
+            <li class="ribbon-breadcrumb-item Last"><span class="ribbon-breadcrumb">参加申し込み</span></li>
+          </ol>
+          <h1 class="ribbon-banner"><span class="ribbon-banner-text">参加申し込み</span></h1>
+        </div>
+      </div>
       <article>
         <h1>ようこそ、対馬へ！</h1>
         <p>このたびは「みらいらぼつしま」に関心を寄せていただき、ありがとうございます。参加に際しましては以下の内容をご確認の上、エントリーフォームよりお申し込みください。</p>
