--- a/sponsor.html
+++ b/sponsor.html
@@ -9,7 +9,7 @@
     <title>スポンサー企業・団体募集のご案内</title>
   </head>
 <body>
-  <div id="wrap" class="container-fluid">
+  <div id="wrap" class="">
     <!-- ヘッダー(ナビバー )開始 -->
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
@@ -30,6 +30,7 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">ホーム</a></li>
             <li><a href="about.html">研究会について</a></li>
+            <li><a href="schedule.html">スケジュール</a></li>
             <li><a href="prepare.html">対馬についての予習</a></li>
             <li><a href="fieldWork.html">フィールドワーク</a></li>
             <li><a href="traffic.html">交通案内</a></li>
@@ -66,21 +67,20 @@
     </nav>
     <!-- ヘッダー終了 -->
 
-        <!-- パンくずリスト開始 -->
-        <div>
-          <p class="pankuzu">
-            <a href="http://www.itolab.nitech.ac.jp/SIG-CCI/">市民共創知 研究会 Web</a>
-            &nbsp;&nbsp;&gt;&nbsp;&nbsp;
-            <a href="index.html">第２回 研究会 Web</a>
-            &nbsp;&nbsp;&gt;&nbsp;&nbsp;
-            <a href="sponsor.html">スポンサー企業・団体募集のご案内</a>
-          </p>
-        </div>
-        <!-- パンくずリスト終了 -->
+
     <!-- 主文開始 -->
     <div class="contents">
+      <div class="ribbon-wrap">
+        <div class="content-wrap">
+          <ol class="ribbon-breadcrumb-list">
+            <li class="ribbon-breadcrumb-item"><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/" class="ribbon-breadcrumb">市民共創知 研究会 Web</a></li>
+            <li class="ribbon-breadcrumb-item"><a href="index.html" class="ribbon-breadcrumb">第２回 研究会 Web</a></li>
+            <li class="ribbon-breadcrumb-item Last"><span class="ribbon-breadcrumb">スポンサー企業・団体募集のご案内</span></li>
+          </ol>
+          <h1 class="ribbon-banner"><span class="ribbon-banner-text">スポンサー企業・団体募集のご案内</span></h1>
+        </div>
+      </div>
         <article>
-          <h1>スポンサー企業・団体募集のご案内</h1>
           <p>市民共創知研究会は、2016年に発足した人工知能学会の新しい研究会でわたしたち市民が抱えている問題に対してみんなで対話し、解決策を見つけ出し、実践的に解いていくことを目的としています。</p>
           <p>つきましては、第2回研究会の開催趣旨にご賛同いただけるスポンサー企業・団体様を募集させていただきます。企業として地域の課題に取り組んでいくための手法を探っておられる団体様がいらっしゃいましたら、是非とも本大会の開催趣旨にご賛同のうえ、ご協力を賜りますよう、よろしくお願い申し上げます。</p>
           <section id="article1">
