--- a/traffic.html
+++ b/traffic.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <div id="wrap" class="container-fluid">
+  <div id="wrap" class="">
     <!-- ヘッダー(ナビバー )開始 -->
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
@@ -30,6 +30,7 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">ホーム</a></li>
             <li><a href="about.html">研究会について</a></li>
+            <li><a href="schedule.html">スケジュール</a></li>
             <li><a href="prepare.html">対馬についての予習</a></li>
             <li><a href="fieldWork.html">フィールドワーク</a></li>
             <li><a href="traffic.html">交通案内</a></li>
@@ -60,21 +61,19 @@
     </nav>
     <!-- ヘッダー終了 -->
 
-      <!-- パンくずリスト開始 -->
-      <div>
-        <p class="pankuzu">
-          <a href="http://www.itolab.nitech.ac.jp/SIG-CCI/">市民共創知 研究会 Web</a>
-          &nbsp;&nbsp;&gt;&nbsp;&nbsp;
-          <a href="index.html">第２回 研究会 Web</a>
-          &nbsp;&nbsp;&gt;&nbsp;&nbsp;
-          <a href="traffic.html">交通案内</a>
-        </p>
-      </div>
-      <!-- パンくずリスト終了 -->
     <!-- 主文開始 -->
     <div class="contents">
+      <div class="ribbon-wrap">
+        <div class="content-wrap">
+          <ol class="ribbon-breadcrumb-list">
+            <li class="ribbon-breadcrumb-item"><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/" class="ribbon-breadcrumb">市民共創知 研究会 Web</a></li>
+            <li class="ribbon-breadcrumb-item"><a href="index.html" class="ribbon-breadcrumb">第２回 研究会 Web</a></li>
+            <li class="ribbon-breadcrumb-item Last"><span class="ribbon-breadcrumb">交通案内</span></li>
+          </ol>
+          <h1 class="ribbon-banner"><span class="ribbon-banner-text">交通案内</span></h1>
+        </div>
+      </div>
       <article>
-        <h1>交通案内</h1>
         <section id="article1">
           <h3>各都市からアクセス</h3>
           <br><br>
