佐藤さんからのメッセージを追加した。

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
             <a href="about.html">研究会について</a>
           </p>
         </div>
-        <!-- パンくずリスト終了 -->
+        <!- パンくずリスト終了 -->
 
     <!-- 主文開始 -->
     <div class="contents">
@@ -83,7 +83,7 @@
           <h1 class="ribbon-banner"><span class="ribbon-banner-text">研究会について</span></h1>
         </div>
       </div>
-      <div class="row fw-box">
+      <div class="row fw-box" style="max-width:100%">
         <div class="col-md-8 col-md-offset-2">
           <img class="img-responsive" src="Pictures/About/Theme.jpg" alt="写真">
         </div><!--   <div class="col-md-8 col-md-offset-2"> -->
@@ -132,17 +132,23 @@
             <section class="comment_item">
               <div class="row">
                   <div class="col-md-6 col-sm-6">
-                    <img src="Pictures/noimage3.gif" alt="写真">
+                    <img src="Pictures/Person/satou.jpg" alt="写真">
                 </div>
                 <div class="col-md-6 col-sm-6">
-                  <p>前・対馬市島おこし協働隊</p>
+                  <p>朝日新聞長崎総局　対馬通信員（エリアリポーター）</p>
                   <h5 class="Emphasis3"><span>佐藤 雄二</span></h5><br>
                 </div>
               </div>
               <div class="item_txt">
-                  <p class="txt">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト<br>
-                      テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト <br>
-                      テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト
+                  <p class="txt">
+                    今年の3月まで、対馬市島おこし協働隊（地域おこし協力隊）をしておりました佐藤雄二と申します。<br>
+                    第1回研究会のお誘いを受けた時、最初は人工知能と地域の課題というあまり関連性のないことの掛け合わせが面白そうと思い、遠路はるばる参加しました。まさか、次回開催地の打診を受けるとは思ってもいませんでしたが。
+                    <br><br>
+                    とはいいながらも、対馬には類い稀な自然・歴史・文化・産業といった地域資源があり、またインバウンド観光や平成の大合併による広域行政など、良いのか悪いのかはともかく、地域における様々な課題があります。そして、解決に取り組む市民の方々もいらっしゃいますので、研究フィールドとして非常にふさわしい場所だと考えています。
+                    <br><br>
+                    この研究会に前回参加した時印象に残っていることは、様々な経歴を持った方が集まり多面的な視点から解決に資するアイデアを出し合い発展させていくことや、立ち上げたプロジェクトを実社会に向けて応用していこうとする姿勢ももちろんですが、なにより幹事の方々をはじめご参加のみなさんのお人柄の良さと好奇心や知識欲が旺盛で、早速なにか一緒にやりたいと感じさせるような魅力的な方々ばかりでしたので、とにかく場にいることが非常に楽しいことでした。そのようなわけで、いらっしゃったみなさんが対馬で見たり感じたりされたことから、どのようなアイデアが生まれるか大変楽しみにしております。
+                    <br><br>
+                    地方でコンベンションが行われる機会があまりありませんので、色々とご不便などお掛けすることもあろうかと思いますが、この研究会を対馬で開催すること自体がひとつの地域課題解決に対する取り組みでもありますので、何卒ご協力いただけると幸いです。参加者のみなさまを最善を尽くしてお迎えいたしますので、どうぞよろしくお願いいたします。
                   </p>
             </section>
           </section>
